--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,17 @@
 {
     "name": "faustbrian/laravel-reportable",
     "description": "reportable Polymorphic Eloquent Models for Laravel 5",
-    "keywords": [
-        "laravel",
-        "framework",
-        "Laravel-messageable",
-        "Laravel Messageable",
-        "Brian Faust",
-        "faustbrian",
-        "laravel-reportable"
-    ],
+    "keywords": ["laravel", "framework", "Laravel-reportable", "Laravel Reportable", "Brian Faust", "faustbrian"],
     "license": "MIT",
     "authors": [{
         "name": "Brian Faust",
         "email": "hello@brianfaust.de",
-        "homepage": "https://brianfaust.de",
-        "role": "Developer"
+        "homepage": "https://brianfaust.de"
     }],
     "require": {
-        "php": "^5.6.4 || ^7.0",
+        "php": "^7.0",
         "faustbrian/laravel-service-provider": "^1.0",
-        "illuminate/database": "5.2.* || 5.3.*"
+        "illuminate/database": "5.3.*"
     },
     "require-dev": {
         "graham-campbell/testbench": "^3.2",
