--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,9 @@
         "homepage": "https://brianfaust.me"
     }],
     "require": {
-        "php": "^7.1",
-        "illuminate/support": "^5.6",
-        "illuminate/database": "^5.6"
+        "php": ">=7.1",
+        "illuminate/support": "~5.4||~5.5||~5.6||~5.7||~5.8",
+        "illuminate/database": "~5.4||~5.5||~5.6||~5.7||~5.8"
     },
     "require-dev": {
         "graham-campbell/testbench": "^5.0",
