--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     }],
     "require": {
         "php": "^7.1",
-        "illuminate/support": "^5.6",
-        "illuminate/database": "^5.6"
+        "illuminate/support": "5.6.*|5.7.*|5.8.*",
+        "illuminate/database": "5.6.*|5.7.*|5.8.*"
     },
     "require-dev": {
         "graham-campbell/testbench": "^5.0",
