--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,24 @@
 {
     "name": "artisanry/reportable",
     "description": "reportable Polymorphic Eloquent Models for Laravel 5",
-    "keywords": ["laravel", "framework", "Laravel-reportable", "Laravel Reportable"],
+    "keywords": [
+        "laravel",
+        "framework",
+        "Laravel-reportable",
+        "Laravel Reportable"
+    ],
     "license": "MIT",
-    "authors": [{
-        "name": "Brian Faust",
-        "email": "hello@basecode.sh",
-        "homepage": "https://basecode.sh"
-    }],
+    "authors": [
+        {
+            "name": "Brian Faust",
+            "email": "hello@basecode.sh",
+            "homepage": "https://basecode.sh"
+        }
+    ],
     "require": {
-        "php": "^7.1",
-        "illuminate/support": "5.6.*|5.7.*|5.8.*",
-        "illuminate/database": "5.6.*|5.7.*|5.8.*"
+        "php": "^7.2",
+        "illuminate/support": "^5.8",
+        "illuminate/database": "^5.8"
     },
     "require-dev": {
         "graham-campbell/testbench": "^5.0",
